fix roles, rules and domains
